--- a/RinKoBoom.html
+++ b/RinKoBoom.html
@@ -4,11 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <title>RinKoBoom</title>
+    <link rel="shortcut icon" href="./image/Stamps/RinKoBoom.png">
 </head>
 
 <body>
-    <img src="./image/Pure/I_Don't_Like_Crowds/I_Don't_Like_Crowds.png" alt="I_Don't_Like_Crowds"
-        title="I_Don't_Like_Crowds">
+    <table width="max-width:100%;overflow:hidden">
+        <tr>
+            <td colspan="1">
+                <h1>RinKoBoom</h1>
+            </td>
+        </tr>
+        <div>
+            <img style="max-width:100%;overflow:hidden;" src="./image/Pure/I_Don't_Like_Crowds/I_Don't_Like_Crowds.png"
+                alt="I_Don't_Like_Crowds" title="I_Don't_Like_Crowds" class="img">
+        </div>
+
 </body>
 
 </html>
