--- a/RinKoBoom.html
+++ b/RinKoBoom.html
@@ -3,21 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="Rinko,bangdream,rinko">
+    <meta name="author" content="WatcherXiaosi4">
     <title>RinKoBoom</title>
     <link rel="shortcut icon" href="./image/Stamps/RinKoBoom.png">
+    <link rel="stylesheet" type="text/css" href="RinkoBoom.css">
 </head>
 
 <body>
-    <table width="max-width:100%;overflow:hidden">
+
+    <table>
         <tr>
-            <td colspan="1">
-                <h1>RinKoBoom</h1>
-            </td>
+            <h1>RinkoBoom</h1>
         </tr>
-        <div>
-            <img style="max-width:100%;overflow:hidden;" src="./image/Pure/I_Don't_Like_Crowds/I_Don't_Like_Crowds.png"
-                alt="I_Don't_Like_Crowds" title="I_Don't_Like_Crowds" class="img">
-        </div>
+
+    </table>
+    <div>
+        <!-- <img style="max-width:100%;overflow:hidden;" src="./image/Pure/I_Don't_Like_Crowds/I_Don't_Like_Crowds.png"
+            alt="I_Don't_Like_Crowds" title="I_Don't_Like_Crowds" class="img"> -->
+    </div>
 
 </body>
 
